Make sure the text alignment is left for experience entries.

--- a/css/override.css
+++ b/css/override.css
@@ -1,5 +1,6 @@
 .feature-content {
 	width: 75%;
+	text-align: left;
 }
 .feature-content > ul {
 	padding: 16px;
